--- a/Logica_de_Programacao_2/compreensao_listas.ipynb
+++ b/Logica_de_Programacao_2/compreensao_listas.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Grupo 2\n",
+    "- Ingrid\n",
+    "- Gustavo\n",
+    "- Jessica\n",
+    "- Junio\n",
+    "- Tamiris\n",
+    "- Vanderson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Compreensão de listas"
    ]
   },
@@ -16,30 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "701 µs ± 109 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "# criando uma lista de quadrados dos números de 1 até 10\n",
+    "%%timeit\n",
+    "# criando uma lista de quadrados dos números de 1 até 2000\n",
     "quadrados = []\n",
     "\n",
-    "for x in range(1, 11):\n",
+    "for x in range(1, 2001):\n",
     "    quadrados.append(x**2)\n",
     "\n",
-    "print(quadrados)\n",
-    "print(x)"
+    "# print(quadrados)\n",
+    "# print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "509 µs ± 56.4 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "# criando uma lista de quadrados dos números de 1 a 10 usando a compreensão de listas\n",
-    "quadrados_compreensao = [num**2 for num in range(1, 11)]\n",
+    "%%timeit\n",
+    "# criando uma lista de quadrados dos números de 1 a 2000 usando a compreensão de listas\n",
+    "quadrados_compreensao = [num**2 for num in range(1, 2001)]\n",
     "\n",
-    "print(quadrados_compreensao)\n"
+    "# print(quadrados_compreensao)\n"
    ]
   },
   {
@@ -61,8 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5, 4.5, 2.0, 3.5, 3.0, 1.0]\n",
-      "['P', 'R', 'O', 'G', 'R', 'A', 'M', 'A']\n"
+      "[0.5, 4.5, 2.0, 3.5, 3.0, 1.0]\n"
      ]
     }
    ],
@@ -71,7 +101,23 @@
     "numeros = [1, 9, 4, 7, 6, 2]\n",
     "metades = [n/2 for n in numeros]\n",
     "print(metades)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'R', 'O', 'G', 'R', 'A', 'M', 'A']\n"
+     ]
+    }
+   ],
+   "source": [
     "# transformando cada item da lista texto em maiúscula\n",
     "texto = list('programa')\n",
     "texto_maiusculo = [letra.upper() for letra in texto]\n",
@@ -140,17 +186,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sintaxe\n",
+    "\n",
     "Podemos observer que a sintaxe muda um pouco quando usamos o *else* na compreensão.  \n",
     "Podemos dizer que para compreensão de lista a sintaxe seria:\n",
     "- informar a expresão que queremos calcular\n",
     "- informar a iteração usando o *for*\n",
     "- informar a condição caso usemos apenas *if*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "lista = [expressao for item in colecao]\n",
+    "\n",
+    "# equivale a:\n",
+    "\n",
+    "for item in colecao:\n",
+    "    lista.append(expressao)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[expressao for item in colecao if condicao]\n",
+    "\n",
+    "# equivale a:\n",
+    "\n",
+    "for item in colecao:\n",
+    "    if condicao:\n",
+    "        lista.append(expressao)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Já se optarmos por usar o *else* a sintaxe fica:\n",
     "- informar a expressão que queremos calcular\n",
     "- informar a condição *if*\n",
     "- informar a condição *else* e a expressão alternativa\n",
     "- informar a iteração *for*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[expressao if condicao else expressao_alternativa for item in colecao] \n",
+    "\n",
+    "# equivale a:\n",
+    "\n",
+    "for item in colecao:\n",
+    "    if condicao:\n",
+    "        lista.append(expressao)\n",
+    "    else:\n",
+    "        lista.append(expressao_alternativa)"
    ]
   },
   {
@@ -240,37 +341,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ana': 9.0, 'Bruno': 8.0, 'Carla': 8.0, 'Daniel': 6.5, 'Emília': 7.0}\n"
+      "9.53 µs ± 1.84 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# realizando a mesma tarefa usando a função zip\n",
     "alunos = ['Ana', 'Bruno', 'Carla', 'Daniel', 'Emília']\n",
     "medias = [9.0, 8.0, 8.0, 6.5, 7.0]\n",
     "\n",
     "cadastro = {aluno:media for aluno, media in zip(alunos, medias)}\n",
     "\n",
-    "print(cadastro)"
+    "#print(cadastro)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ana': 9.0, 'Bruno': 8.0, 'Carla': 8.0, 'Daniel': 6.5, 'Emília': 7.0}\n"
+      "9.05 µs ± 2.4 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -283,7 +385,7 @@
     "cadastro1 = {}\n",
     "for aluno, media in zip(alunos, medias):\n",
     "    cadastro1[aluno] = media\n",
-    "print(cadastro1)"
+    "#print(cadastro1)"
    ]
   }
  ],
