--- a/Logica_de_Programacao_2/exercicios_aula1.ipynb
+++ b/Logica_de_Programacao_2/exercicios_aula1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,25 @@
     "    return max \n",
     "\n",
     "print(f'O número máximo da lista é {maximo(lista_2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número máximo da lista é 89\n"
+     ]
+    }
+   ],
+   "source": [
+    "# outra forma de resolução\n",
+    "lista_2.sort()\n",
+    "print(f'O número máximo da lista é {lista_2[-1]}')"
    ]
   },
   {
