condição de escalas iguais na função principal

--- a/Logica_de_Programacao_2/exercicio_conversor_temp.ipynb
+++ b/Logica_de_Programacao_2/exercicio_conversor_temp.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +37,12 @@
     "    \n",
     "    elif escala_conversao == 'F':\n",
     "        temp_f = (temperatura * (9/5)) + 32\n",
-    "        return round(temp_f, 2)\n",
-    "\n",
-    "    else:\n",
-    "        return temperatura"
+    "        return round(temp_f, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +55,12 @@
     "        return round(temp_k, 2)\n",
     "    elif escala_conversao == 'C':\n",
     "        temp_c = 5/9 * (temperatura - 32)\n",
-    "        return round(temp_c, 2)\n",
-    "    else:\n",
-    "        return temperatura"
+    "        return round(temp_c, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +73,12 @@
     "        return round(temp_f, 2)\n",
     "    elif escala_conversao == 'C':\n",
     "        temp_c =  temperatura - 273.15\n",
-    "        return round(temp_c, 2)\n",
-    "    else:\n",
-    "        return temperatura"
+    "        return round(temp_c, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +86,9 @@
     "\n",
     "    if escala_atual not in ['K', 'C', 'F'] or escala_conversao not in ['K', 'C', 'F']:\n",
     "        return 'Entrada inválida! Use K para Kelvin, C para Celsius ou F para Fahrenheit.'\n",
+    "    \n",
+    "    if escala_atual == escala_conversao:\n",
+    "        return print(f'{temperatura} °{escala_atual} corresponde a {temperatura} °{escala_conversao}')\n",
     "\n",
     "    if escala_atual == 'C':\n",
     "        temp_convertida = converter_celsius(temperatura, escala_conversao)\n",
@@ -110,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.0 °C corresponde a 212.0 °F\n"
+      "100.0 °C corresponde a 100.0 °C\n"
      ]
     }
    ],
