atualização exercícios aula 1

--- a/Logica_de_Programacao_2/exercicios_aula1.ipynb
+++ b/Logica_de_Programacao_2/exercicios_aula1.ipynb
@@ -11,27 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A lista possui 10 números pares.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'A lista possui 10 números pares.'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lista_numeros = list(range(20))\n",
     "\n",
     "def contar_pares(lista):\n",
-    "\n",
-    "    contagem = 0\n",
-    "    for num in lista:\n",
-    "        if num % 2 == 0:\n",
-    "            contagem += 1\n",
-    "    print(f'A lista possui {contagem} números pares.')\n",
+    "    contagem = [num for num in lista if num % 2 == 0] # cria uma nova lista somente com números pares\n",
+    "    return f'A lista possui {len(contagem)} números pares.'\n",
     "\n",
     "contar_pares(lista_numeros)\n"
    ]
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,32 +58,6 @@
    "source": [
     "lista_2 = [2, 5, 3, 10, 4, 89, 54, 65, 34]\n",
     "\n",
-    "def maximo(lista):\n",
-    "\n",
-    "    max = lista[0] # definindo o primeiro elemento da lista como o maior número.\n",
-    "    for num in lista:\n",
-    "        if num >= max:\n",
-    "            max = num\n",
-    "    return max \n",
-    "\n",
-    "print(f'O número máximo da lista é {maximo(lista_2)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O número máximo da lista é 89\n"
-     ]
-    }
-   ],
-   "source": [
-    "# outra forma de resolução\n",
     "lista_2.sort()\n",
     "print(f'O número máximo da lista é {lista_2[-1]}')"
    ]
@@ -98,30 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A média do aluno é 7.5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'A média do aluno é 8.5'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def calcular_media():\n",
     "    \n",
-    "    notas = []\n",
-    "\n",
-    "    for i in range(4): \n",
-    "        nota = float(input(f'Informe uma nota {i+1}: '))\n",
-    "        notas.append(nota)\n",
-    "    \n",
+    "    notas = [float(input(f'Informe uma nota {i+1}: ')) for i in range(4)]\n",
     "    media = sum(notas)/len(notas)\n",
-    "    return media\n",
+    "    return f'A média do aluno é {media}'\n",
     "\n",
-    "print(f'A média do aluno é {calcular_media()}')\n"
+    "calcular_media()\n"
    ]
   },
   {
@@ -133,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,15 +115,17 @@
       "Pedro 8\n",
       "Joao 10\n",
       "Ana 7\n",
-      "Gabriel 3\n"
+      "Gabriel 3\n",
+      "Carlos 6\n",
+      "Beatriz 7\n"
      ]
     }
    ],
    "source": [
     "# podemos acessar simultaneamente os dois dados usando o método zip\n",
     "\n",
-    "nomes = ['Maria', 'Pedro', 'Joao', 'Ana', 'Gabriel']\n",
-    "notas = [9, 8, 10, 7, 3]\n",
+    "nomes = ['Maria', 'Pedro', 'Joao', 'Ana', 'Gabriel', 'Carlos', 'Beatriz']\n",
+    "notas = [9, 8, 10, 7, 3, 6, 7]\n",
     "\n",
     "for nome, nota in zip(nomes, notas):\n",
     "    print(nome, nota)\n",
