--- a/Logica_de_Programacao_2/exercicio_conversor_temp.ipynb
+++ b/Logica_de_Programacao_2/exercicio_conversor_temp.ipynb
@@ -42,6 +42,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def celsius_to_fahrenheit(valor: float) -> float:\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
